--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 Makefile
-bloatedOSD.pro
+*.pro
+moc*
+*.o
 .qmake.stash
 bloatedOSD
-dbushandler.o
-main.o
-moc_dbushandler.cpp
-moc_dbushandler.o
-moc_predefs.h
+MakeFile
